# spawns-parser

./: .gitignore  package-lock.json  readme.md  tsconfig.json
Sources/src-c/: .gitignore  main.c  makefile
Sources/src-coffee/: coffeescript.md  index.coffee  index.js  makefile  package.json
Sources/src-cpp/: main.cpp
Sources/src-dart/: main.dart
Sources/src-js/: index.js
Sources/src-julia/: main.jl
Sources/src-py/: check-corrupted.py  parse-scenes.py
Sources/src-rusty/: makefile
Sources/src-rusty-improved/: Cargo.toml
Sources/src-rusty-improved/src/: main.rs
Sources/src-rusty/src/: main.rs
Sources/src-ts/: index.js  index.ts  makefile  package-lock.json
data/: gadget.json  spawns2.json
old/: check-corrupted.py  check-reoccuring.py  parse-scenes.py
parsed/: Spawns.json  parsedSpawns.json
src/: parse-scenes.ts
src-c/: main.c  makefile
src-coffee/: index.coffee
src-cpp/: Makefile  main.cpp
src-dart/: main.dart
src-julia/: main.jl  makefile
src-py/: check-corrupted.py  parse-scenes.py
src-rusty/: Cargo.toml
src-rusty/src/: main.rs  structs.rs
src-ts/: index.js  index.ts  makefile  package.json
src-ts/src/: main.ts  parse-scenes.ts
