[package]
name = "src-rusty-improved"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
colored = "2.0.0"
fs_extra = "1.2.0"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }

[profile.release]
strip=true
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
